// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItwCredentialClaimsSection should match the snapshot when claims are hidden 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      color="grey-700"
      defaultColor="black"
      defaultWeight="SemiBold"
      font="TitilliumWeb"
      fontStyle={
        {
          "fontSize": 18,
          "lineHeight": 25,
        }
      }
      style={
        [
          {
            "fontSize": 18,
            "lineHeight": 25,
          },
          {
            "color": "#555C70",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      weight="SemiBold"
    >
      Personal data
    </Text>
    <View
      accessibilityLabel="Show claim values"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="toggle-claim-visibility"
    >
      <View
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "scale": undefined,
                },
              ],
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          animatedProps={
            {
              "color": undefined,
            }
          }
          bbHeight={24}
          bbWidth={24}
          focusable={false}
          height={24}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#0073E6",
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          tintColor="#0073E6"
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M1.707.293A1 1 0 0 0 .293 1.707l4.483 4.484A13.063 13.063 0 0 0 .63 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c1.931 0 3.763-.42 5.41-1.176l4.883 4.883a1 1 0 0 0 1.414-1.414l-22-22Zm19.099 16.27c1.02-.939 1.888-2.039 2.566-3.259.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4c-1.15 0-2.266.15-3.329.43l1.691 1.691a10.997 10.997 0 0 1 11.26 5.545.686.686 0 0 1 0 .667 11.05 11.05 0 0 1-2.233 2.815l1.416 1.416Zm-3.856-3.855a5 5 0 0 0-5.658-5.658l2.804 2.803.05.051 2.804 2.804Zm-14.573-1.04a11.055 11.055 0 0 1 3.846-4.03l1.605 1.605a5 5 0 0 0 6.929 6.929l1.125 1.124A10.977 10.977 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667ZM9 12c0-.463.105-.902.292-1.293l4.001 4A3 3 0 0 1 9 12Z"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityLabel="Nome Hidden"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Nome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              ******
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Cognome Hidden"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Cognome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              ******
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Età Attributo non riconosciuto"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Età
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              Attributo non riconosciuto
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
  </View>
</View>
`;

exports[`ItwCredentialClaimsSection should match the snapshot when claims are visible 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      color="grey-700"
      defaultColor="black"
      defaultWeight="SemiBold"
      font="TitilliumWeb"
      fontStyle={
        {
          "fontSize": 18,
          "lineHeight": 25,
        }
      }
      style={
        [
          {
            "fontSize": 18,
            "lineHeight": 25,
          },
          {
            "color": "#555C70",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      weight="SemiBold"
    >
      Personal data
    </Text>
    <View
      accessibilityLabel="Hide claim values"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="toggle-claim-visibility"
    >
      <View
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "alignItems": "center",
            },
            {
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "scale": undefined,
                },
              ],
            },
          ]
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          animatedProps={
            {
              "color": undefined,
            }
          }
          bbHeight={24}
          bbWidth={24}
          focusable={false}
          height={24}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#0073E6",
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          tintColor="#0073E6"
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M2.377 11.667A10.997 10.997 0 0 1 12.001 6c4.138 0 7.744 2.285 9.623 5.666a.686.686 0 0 1 0 .667A10.997 10.997 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667zM12.001 4A12.997 12.997 0 0 0 .629 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c4.894 0 9.155-2.705 11.372-6.696.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4zM15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityLabel="Nome Luigi"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Nome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              Luigi
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Cognome Rossi"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Cognome
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              Rossi
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
    <View
      accessibilityLabel="Età Attributo non riconosciuto"
      accessible={true}
      style={
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            accessible={true}
            importantForAccessibility="yes"
          >
            <Text
              allowFontScaling={false}
              color="grey-700"
              defaultColor="blue"
              defaultWeight="Bold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                  },
                ]
              }
              weight="Regular"
            >
              Età
            </Text>
            <Text
              allowFontScaling={false}
              color="black"
              defaultColor="black"
              defaultWeight="SemiBold"
              font="TitilliumWeb"
              fontStyle={
                {
                  "fontSize": 18,
                  "lineHeight": 25,
                }
              }
              numberOfLines={2}
              style={
                [
                  {
                    "fontSize": 18,
                    "lineHeight": 25,
                  },
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillium Web",
                    "fontStyle": "normal",
                    "fontWeight": "600",
                  },
                ]
              }
              weight="SemiBold"
            >
              Attributo non riconosciuto
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#D2D6E3",
          "height": 0.5,
        }
      }
    />
  </View>
</View>
`;
